# fastapi-template

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_config.py
alembic/: README.md  env.py
alembic/versions/: 2026_02_11_2135-5fb242aa5433_initial_schema_with_users_conversations_.py
app/: main.py
app/api/: __init__.py  conversations.py  messages.py  users.py
app/api/v1/: users.py
app/core/: app.py  config.py  database.py  exceptions.py  init_app.py  logging.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/repositories/: base.py  conversation_repository.py  message_repository.py  user_repository.py
app/schemas/: conversation.py  message.py  response.py  user.py  users.py
app/services/: conversation_service.py  message_service.py  user_service.py
app/settings/: config.py
sql/: schema.sql
tests/: README.md  conftest.py  test_conversations.py  test_messages.py  test_users.py
