[project]
name = "fastapi-template"
version = "0.1.0"
description = "A modern FastAPI project template with async SQLAlchemy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.9.1",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
